# Video-Compression-Pipeline-Low-Latency-

telehealth_codec/: .gitignore  CMakeLists.txt  README.md
telehealth_codec/apps/: decode_cli.cpp  encode_cli.cpp  live_stream_receiver.cpp  live_stream_sender.cpp
telehealth_codec/benchmarks/: bench_end_to_end.cpp  bench_motion_search.cpp
telehealth_codec/docs/: architecture.md  benchmarks.md  bitstream_format.md
telehealth_codec/include/codec/: Bitstream.h  Block.h  Encoder.h  EncoderConfig.h  EntropyCoder.h  Frame.h  MotionCompensation.h  MotionEstimation.h  MotionVector.h  PixelFormat.h  Quantizer.h  RateControl.h  Residual.h  Transform.h  YuvConverter.h
telehealth_codec/include/io/: FileBitstreamSink.h  JitterBuffer.h  Packet.h  UdpPacketSink.h  UdpReceiver.h  VideoSink.h  VideoSource.h
telehealth_codec/include/pipeline/: BoundedQueue.h  Pipeline.h  Stage.h
telehealth_codec/include/util/: AlignedAlloc.h  CpuFeatures.h  Logger.h  Timer.h
telehealth_codec/scripts/: profile_perf.sh  run_sample.sh
telehealth_codec/src/codec/: BitstreamWriter.cpp  Block.cpp  Encoder.cpp  EntropyCoder.cpp  Frame.cpp  MotionCompensation.cpp  MotionEstimation.cpp  Quantizer.cpp  RateControl.cpp  Residual.cpp  Transform.cpp  YuvConverter.cpp
telehealth_codec/src/io/: FfmpegVideoSource.cpp  FileBitstreamSink.cpp  FileYuvSink.cpp  JitterBuffer.cpp  UdpPacketSink.cpp  UdpReceiver.cpp
telehealth_codec/src/pipeline/: Pipeline.cpp  Stage.cpp
telehealth_codec/src/util/: AlignedAlloc.cpp  CpuFeatures.cpp  Logger.cpp  Timer.cpp
telehealth_codec/tests/: test_bitstream_roundtrip.cpp  test_block_iterator.cpp  test_motion_search.cpp  test_yuv_conversion.cpp
